Wed Oct 24 11:57:24 2012  Narihiro Nakamura  <authornari@gmail.com>

	* gc.c (gc_prepare_free_objects): rename to match the behavior of
	  this function.

Wed Oct 24 11:55:19 2012  Koichi Sasada  <ko1@atdot.net>

	* ext/objspace/objspace.c (reachable_object_from_i): change data
	  structure of the result of reachable objects. Keys of table
	  contains object_id of each reachable objects. Value of table
	  is an object itself or an instance of InternalObjectWrapper.
	  To avoid duplication, we use st_table and object_id keys.

	* ext/objspace/objspace.c (type2sym): bug fix.
	  Should use `i' instead of `type'.

Wed Oct 24 10:33:09 2012  Koichi Sasada  <ko1@atdot.net>

	* gc.c (garbage_collect, gc_marks): move the location of
	  clear and restore rb_objspace_t::mark_func_data
	  from garbage_collect() to gc_marks().

Wed Oct 24 10:17:45 2012  Koichi Sasada  <ko1@atdot.net>

	* ext/objspace/objspace.c (Init_objspace): add a new method
	  `ObjectSpace::InternalObjectWrapper#internal_object_id' which returns
	  an object id of a wrapped internal object.

Wed Oct 24 08:55:04 2012  Koichi Sasada  <ko1@atdot.net>

	* ext/objspace/objspace.c (ObjectSpace.reachable_objects_from):
	  internal object support.
	  If given object `obj' has references to internal objects
	  (such as T_NODE objects), then this method returns instances of
	  `ObjectSpace::InternalObjectWrapper' instead of that internal objects.
	  This instance contains a refereance to an internal object and you can
	  check the type of internal object using
	  `ObjectSpace::InternalObjectWrapper#type' method.
	  Rdoc of `InternalObjectWrapper' is not prepared yet.

	* gc.c (rb_objspace_reachable_objects_from), gc.h: change
	  an interface of 'rb_objspace_reachable_objects_from()'

	* gc.c, gc.h: add two APIs
	  - rb_objspace_markable_object_p(obj): check markable or not.
	  - rb_objspace_internal_object_p(obj): check internal or not.

Wed Oct 24 05:52:36 2012  Koichi Sasada  <ko1@atdot.net>
